# hellodb

./: .gitignore  Cargo.toml  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy-cloudflare.yml
crates/hellodb-brain/: Cargo.toml
crates/hellodb-brain/src/: config.rs  digest.rs  error.rs  gates.rs  lock.rs  main.rs  state.rs
crates/hellodb-cli/: Cargo.toml
crates/hellodb-cli/src/: main.rs
crates/hellodb-core/src/: error.rs  lib.rs  record.rs
crates/hellodb-crypto/src/: lib.rs
crates/hellodb-embed/: Cargo.toml
crates/hellodb-embed/src/: cloudflare.rs  embed_toml.rs  embedder.rs  error.rs  fastembed_backend.rs  huggingface.rs  lib.rs  mock.rs  openai.rs
crates/hellodb-mcp/: Cargo.toml
crates/hellodb-mcp/src/: identity.rs  main.rs  protocol.rs  server.rs
crates/hellodb-query/src/: lib.rs  query.rs
crates/hellodb-storage/: Cargo.toml
crates/hellodb-storage/src/: lib.rs  wal.rs
crates/hellodb-sync/: Cargo.toml
crates/hellodb-sync/src/: engine.rs  error.rs  gateway_backend.rs  lib.rs  manifest.rs
crates/hellodb-vector/: Cargo.toml
crates/hellodb-vector/src/: error.rs  index.rs  lib.rs  math.rs
gateway/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
gateway/src/: auth.ts  embed.ts  env.ts  errors.ts  health.ts  index.ts  r2.ts
gateway/test/: env.d.ts  index.test.ts
installer/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
installer/src/: index.ts
integrations/: README.md
integrations/remote-mcp-bridge/: README.md  metadata.json
integrations/slack-capture/: README.md  metadata.json
landing/: package.json
landing/app/: layout.tsx  opengraph-image.tsx
landing/app/blog/context-is-triage-memory-is-engineering/: opengraph-image.tsx  page.tsx
landing/components/site/: brain-loop.tsx  console-sig.tsx  footer.tsx  gateway-diagram.tsx  hero-filetree.tsx  hero.tsx  in-action.tsx  install.tsx  nav.tsx  properties.tsx
landing/public/: _headers
plugin/.claude-plugin/: plugin.json
plugin/agents/: memory-consolidate.md  memory-digest.md
plugin/hooks/: hooks.json  run-digest-async.sh
plugin/skills/consolidate-now/: SKILL.md
plugin/skills/digest-now/: SKILL.md
plugin/skills/hellodb-consolidate-now/: SKILL.md
plugin/skills/hellodb-digest-now/: SKILL.md
plugin/skills/hellodb-recall/: SKILL.md
plugin/skills/recall/: SKILL.md
recipes/: README.md
recipes/_template/: README.md  metadata.json
recipes/claude-memory-import/: README.md  metadata.json
recipes/slack-capture/: README.md  metadata.json  verify.sh
scripts/: bundle-plugin.sh  dev-symlink-plugin.sh  install.ps1  install.sh  onboard.sh  setup-cloudflare.sh  validate-contributions.py
tests/: phase1_integration.rs
