[workspace]
resolver = "2"
members = [
    "crates/hellodb-crypto",
    "crates/hellodb-core",
    "crates/hellodb-storage",
    "crates/hellodb-auth",
    "crates/hellodb-query",
    "crates/hellodb-sync",
    "crates/hellodb-mcp",
    "crates/hellodb-vector",
    "crates/hellodb-brain",
    "crates/hellodb-cli",
    "crates/hellodb-embed",
]

# Root package enables workspace-level integration tests in tests/
[package]
name = "hellodb"
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.82"

# Dependencies for integration tests
[dependencies]
hellodb-crypto = { path = "crates/hellodb-crypto" }
hellodb-core = { path = "crates/hellodb-core" }
hellodb-storage = { path = "crates/hellodb-storage" }
hellodb-auth = { path = "crates/hellodb-auth" }
hellodb-query = { path = "crates/hellodb-query" }
hellodb-sync = { path = "crates/hellodb-sync" }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
# Vendored OpenSSL keeps the build portable — Linux, macOS, AND Windows
# all get a self-contained SQLCipher with no system OpenSSL dependency.
# Adds ~1 minute to cold builds but removes platform-specific setup pain.
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

# Internal crates
hellodb-crypto = { path = "crates/hellodb-crypto" }
hellodb-core = { path = "crates/hellodb-core" }
hellodb-storage = { path = "crates/hellodb-storage" }
hellodb-auth = { path = "crates/hellodb-auth" }
hellodb-query = { path = "crates/hellodb-query" }
hellodb-sync = { path = "crates/hellodb-sync" }
hellodb-vector = { path = "crates/hellodb-vector" }
hellodb-embed = { path = "crates/hellodb-embed" }

[profile.release]
lto = true
opt-level = "s"
strip = true
