[package]
name = "hellodb-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hellodb-brain"
path = "src/main.rs"

[dependencies]
hellodb-core = { workspace = true }
hellodb-crypto = { workspace = true }
hellodb-storage = { workspace = true }
hellodb-vector = { workspace = true }
hellodb-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
