[package]
name = "hellodb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hellodb"
path = "src/main.rs"

[dependencies]
hellodb-core = { workspace = true }
hellodb-crypto = { workspace = true }
hellodb-storage = { workspace = true }
serde_json = { workspace = true }
