[package]
name = "hellodb-storage"
description = "hellodb local storage: in-memory + SQLite/SQLCipher engines with experimental WAL utilities"
version.workspace = true
edition.workspace = true

[dependencies]
hellodb-crypto = { workspace = true }
hellodb-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
