[package]
name = "hellodb-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hellodb-crypto = { workspace = true }
hellodb-core = { workspace = true }
hellodb-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
