[package]
name = "hellodb-vector"
description = "hellodb per-namespace encrypted vector index for semantic recall"
version.workspace = true
edition.workspace = true

[dependencies]
hellodb-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
